[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "url-monitor"
version = "0.1.0"
description = "URL monitor that checks endpoints and generates a Markdown report."
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
    { name = "Shiki Ichitose", email = "149179099+ShikiIchitose@users.noreply.github.com" }
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["requests"]

[project.scripts]
url-monitor = "url_monitor.cli:main"

# pip users: `pip install -e ".[dev]"`
# (Kept intentionally in addition to dependency-groups for compatibility.)
[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pytest-socket>=0.7.0",
  "requests-mock>=1.12.1",
]

# uv users: `uv sync --locked` (dev is included by default via tool.uv.default-groups)
[dependency-groups]
dev = [
  "ruff",
  "pytest",
  "pytest-socket>=0.7.0",
  "requests-mock>=1.12.1",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--disable-socket",
]
